syntax = 'proto3';

service CustomerService {
    rpc getAllCustomers (Empty) returns (CustomerList) {} 
    rpc getCustomerById (CustomerId) returns (Customer) {}
}

message Empty {}

message CustomerId {
    string id = 1;
}

message CustomerList {
    repeated Customer customers = 1;
}

message Customer {
    string id = 1;
    string name = 2;
    int32 age = 3;
    string address = 4;
}